# MPC_TEST

./: BranchChangeLog  ChangeLog  README  run_tests.pl
branches/dependent_libs/: BranchChangeLog  ChangeLog
branches/dependent_libs_old/: ChangeLog  README
branches/dependent_libs_old/expected/more_options/automake/another/: Makefile.am
branches/dependent_libs_old/expected/more_options/automake/c++/: Makefile.am
expected/more_options/automake/c++/: Makefile.am
modules/: OptionProcessor.pm
tests/MultiWS/: build_entry.txt
tests/aggregated/: aggregated.mwc
tests/backwards/: build_entry.txt
tests/command_helper/: additional_options.txt  build_entry.txt
tests/custom_generates_custom/: additional_options.txt
tests/dependencies/: foo.mpc
tests/dependent_libs/: build_entry.txt  foo.mpc
tests/exclude/: additional_options.txt  exclude.mwc
tests/flex_bison/: bus.y  flex_bison.mpc
tests/grouping/: run_test.pl
tests/implicit_resources/: additional_options.txt
tests/java/: additional_options.txt
tests/mixed_languages/: mixed_languages.mwc
tests/more_circular_dependencies/: Code.mpc  Factory.mpc  ROOT.mpc
tests/more_cirular_dependencies/: Factory.mpc  root_export.h
tests/more_options/: additional_options.txt  environment.txt  more_options.mwc
tests/more_workspaces/: build_entry.txt  environment.txt
tests/multi_custom_mapping/: custom1.mpb
tests/multiple_define_customs/: foo.mpc
tests/options/: additional_options.txt  build_entry.txt
tests/qt/: build_entry.txt  configure.ac.patch
tests/swig_perl/: MyModule.mpc  build_entry.txt  swig_perl.mwc
tests/template/: additional_options.txt  build_entry.txt
tests/template_input/: additional_options.txt
tests/value_template/: build_entry.txt  foo.mpc
tests/webapp/: additional_options.txt  build_entry.txt
tests/wide_coverage/: additional_options.txt  configure.ac.patch
tests/wider_coverage/: simple.mpc  simple_lib.mpc
tests/windows_style/: support_lib.mpc
tests/workspaces/: build_entry.txt
trunk/: ChangeLog  README  run_tests.pl
utils/: add_expected_directories.sh  add_expected_files.sh  nightly.sh  nightly_em3.bat  nightly_vc6.bat  nightly_vc71_bmake.bat  nightly_vc8.bat  pick_up_nightly.sh
(+5838 files in other folders)
